infra/k8s/achat-ms-depl.yaml
#definition du deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: achat-ms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: achat-ms
  template:
    metadata:
      labels:
        app: achat-ms
    spec:
      containers:
        - name: achat-ms
          image: iamanismenaa/achat-ms
---
#definition du cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: achat-ms-srv
spec:
  selector:
    app: achat-ms
  ports:
    - name: achat-ms
      protocol: TCP
      port: 3000
      targetPort: 3000
