infra/k8s/document-ms.yaml
#definition du deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-ms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-ms
  template:
    metadata:
      labels:
        app: document-ms
    spec:
      containers:
        - name: document-ms
          image: iamanismenaa/document-ms
---
#definition du cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: document-ms-srv
spec:
  selector:
    app: document-ms
  ports:
    - name: document-ms
      protocol: TCP
      port: 3000
      targetPort: 3000
