infra/k8s/nats-streaming-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-streaming-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-streaming-server
  template:
    metadata:
      labels:
        app: nats-streaming-server
    spec:
      containers:
        - name: nats-streaming-server
          image: nats-streaming:0.17.0
          args:
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'pfe',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-streaming-server-srv
spec:
  selector:
    app: nats-streaming-server
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monotoring
      protocol: TCP
      port: 8222
      targetPort: 8222
