infra/k8s/validation-ms-depl.yaml
#definition du deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-ms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validation-ms
  template:
    metadata:
      labels:
        app: validation-ms
    spec:
      containers:
        - name: validation-ms
          image: iamanismenaa/validation-ms
---
#definition du cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: validation-ms-srv
spec:
  selector:
    app: validation-ms
  ports:
    - name: validation-ms
      protocol: TCP
      port: 3000
      targetPort: 3000
