infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pfe.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-ms-srv
              servicePort: 3000
          - path: /api/departements/?(.*)
            backend:
              serviceName: init-ms-srv
              servicePort: 3000
          - path: /api/demandes/?(.*)
            backend:
              serviceName: demande-ms-srv
              servicePort: 3000
          - path: /api/items/?(.*)
            backend:
              serviceName: demande-ms-srv
              servicePort: 3000
          - path: /api/validation/?(.*)
            backend:
              serviceName: validation-ms-srv
              servicePort: 3000
          - path: /api/achats/?(.*)
            backend:
              serviceName: achat-ms-srv
              servicePort: 3000
          - path: /api/stock/?(.*)
            backend:
              serviceName: stock-ms-srv
              servicePort: 3000
